# 1c-practice

./: README.md  ScreenRecord.webm  meson.build  sp.nazarov.Calories.flatpak  sp.nazarov.Calories.json
data/: calories.gresource.xml  meson.build  sp.nazarov.Calories.desktop.in  sp.nazarov.Calories.gschema.xml  sp.nazarov.Calories.metainfo.xml.in  sp.nazarov.Calories.service.in
data/icons/: meson.build
data/ui/: item.blp  new-dialog  window.blp
po/: POTFILES.in  meson.build
src/: calories.in  calories_item.py  main.py  meson.build  window.py  window.ui
src/backend/: _constants.py  _dish.py  _pathes.py  db.py
